--- a/manage-products.html
+++ b/manage-products.html
@@ -127,7 +127,7 @@
                     <tr>
                         <td class="px-4 py-3 text-sm text-gray-900">${p.name}</td>
                         <td class="px-4 py-3 text-sm text-gray-500">S/. ${parseFloat(p.price).toFixed(2)}</td>
-                        <td class="px-4 py-3 text-sm text-gray-500">${p.category}</td>
+                        <td class="px-4 py-3 text-sm text-gray-500">${p.category.display_name || p.category}</td>
                         <td class="px-4 py-3 text-sm text-gray-500">${p.stock}</td>
                         <td class="px-4 py-3 text-sm font-medium space-x-2">
                             <button onclick="editProduct(${p.id}, '${p.name}', ${p.price}, ${p.category_id}, ${p.stock}, '${p.stock_type}')" class="text-indigo-600 hover:text-indigo-900">Editar</button>
