correccion de errores, actualizacion tailwindcss e implementacion de perfil de usuario

--- a/burger.html
+++ b/burger.html
@@ -4,8 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Comanda Cangre Burger</title>
-    <!-- Incluye el framework de CSS de Tailwind para un diseño rápido y responsive -->
-    <script src="https://cdn.tailwindcss.com"></script>
+    <link href="/dist/output.css" rel="stylesheet"> <!-- Apunta al archivo CSS compilado y optimizado -->
     <!-- Incluye la fuente 'Inter' para una tipografía moderna y legible -->
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap">
     <style>
